--- a/rock-paper-scissors-lizard-spock/style.css
+++ b/rock-paper-scissors-lizard-spock/style.css
@@ -23,12 +23,30 @@ body {
 }
 
 .results-container {
-  font-size: 1.5vh;
-  display: none;
+  width: 30vw;
+  font-size: 1vh;
   margin-left: 5vh;
   background-color: rgb(109, 186, 187);
   padding: 2vh;
   border-radius: 2vh;
+}
+
+.results-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+#reset-button {
+  display: block;
+  height: 5vh;
+  padding: 1vh 2vh;
+  cursor: pointer;
+  font-size: 2vh;
+  border-radius: 1vh;
+  background-color: maroon;
+  color: white;
+  border: 1px solid wheat;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .results {
@@ -76,6 +94,7 @@ body {
   padding: 2vh;
   border-radius: 2vh;
   text-transform: uppercase;
+  font-size: 3vh;
   color: white;
 }
 
@@ -93,4 +112,42 @@ body {
   padding: 1vh;
   border: 1vh solid rgb(22, 19, 61);
   border-radius: 2vh;
+}
+
+.score-board {
+  position: relative;
+  width: 70%;
+  border: 3px solid white;
+  border-radius: 5vh;
+  margin: 1vh auto;
+}
+
+.score {
+  font-size: 5vh;
+  padding: 1vh;
+  text-align: center;
+}
+
+.badge {
+  font-size: 2.5vh;
+  padding: 1vh 2vh;
+  border-radius: 1vh;
+}
+
+#user-label {
+  background-color: rgb(22, 19, 61);
+  color: white;
+  position: absolute;
+  left: 0%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#comp-label {
+  background-color: white;
+  color: rgb(22, 19, 61);
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
