--- a/donut-adventure/style.css
+++ b/donut-adventure/style.css
@@ -1,3 +1,24 @@
-* {
-  background-color: aqua;
+.hero-image-container {
+  width: 40vw;
+  height: 30vh;
+  border: 1px solid black;
+  margin-bottom: 2vh;
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.dougie-health {
+  width: calc(100%);
+  background-color: rgb(65, 223, 65);
+  text-align: center;
+}
+
+.pizzarat-health {
+  width: calc(100%);
+  background-color: rgb(65, 223, 65);
+  text-align: center;
 }
