--- a/jquery-magic/main.css
+++ b/jquery-magic/main.css
@@ -1,14 +1,19 @@
 body {
   background-color: black;
   color: white;
+  text-align: center;
 }
 
 .owl {
   font-family: fantasy;
 }
 
+.secret {
+  opacity: 0.5;
+}
+
 ul {
-  list-style-type: none;
+  list-style: none;
 }
 
 table,
